--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "private": true,
   "dependencies": {
     "bootstrap-sass": "3.3.6",
-    "font-awesome": "fontawesome#^4.6.3"
+    "font-awesome": "fontawesome#^4.6.3",
+    "include-media": "^1.4.6"
   },
   "overrides": {
     "bootstrap-sass": {
@@ -37,6 +38,11 @@
       "main": [
         "./scss/font-awesome.scss",
         "./fonts/*"
+      ]
+    },
+    "include-media": {
+      "main": [
+        "./dist/_include-media.scss"
       ]
     }
   }
